landing page image whitespace resolved

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -4,7 +4,6 @@
   color: white;
   font-size: 16px;
   // border-top: 1px solid #e5e5e5;
-  margin-top: 50px;
   display: flex;
   justify-content: space-between;
   padding: 20px;
